Changes relative to tre-0.16:
  * Identifier obfuscation is not supported anymore.

Changes of tre-0.16 relative to tre-0.15:
  * Added ready-made project directories in example/ to make
    it easier to start projects.
  * REMOVE-PROP is now REMOVE-PROPS and works on an arbitrarily
    number of keys to remove.
  * PROPERTY-VALUES: New function to return the values of the
    keys PROPERTY-NAMES returns.

Changes of tre-0.15 relative to tre-0.14:
  * MAP has been removed.  It has been the same as MAPCAR.
  * MERGE!, HASH-MERGE and OPTIONAL-DOWNCASE have been removed.
  * PATHNAME-FILENAME has been renamed to PATH-FILENAME.
  * LML keyword attributes are translated to camel notation when
    XML or DOM nodes are being generated.  Affects
    https://github.com/SvenMichaelKlose/tre-lml/
  * Empty curly braces {} became literal empty JSON objects.
  * PHP: ROUND, FLOOR, CEILING: New functions.
  * JS: ROUND, FLOOR, CEILING: More accurate implementations.
  * JS/PHP: FIXED-POINT: New function to format numbers.
  * JS: STRING== with more than two arguments fixed.
  * @: The functional version now deals with arrays and strings.
       as well.  The types will be checked at run-time and must
       not be mixed.  The result type is the argument type.
       (You'll get a string for strings.)  This version of @ is
       also available as function DYNAMIC-MAP.
  * JS: Accidently didn't inherit base class methods when no
        methods have been defined in the derived class.  Fixed.
  * PHP: Closures are converted to regular functions again, if
         that's possible.

Changes of tre-0.14 relative to tre-0.13:
  * Don't miss functions that need to get imported from the host
    environment anymore.
  * Only convert keywords that are keys in literal JSON objects
    to camel notation, not literal strings.

Changes of tre-0.13 relative to tre-0.12:
  * REMOVE-PROPERTY: New, non-destructive function.
  * PROPERTY-LIST has been renamed to PROPERTIES-LIST.