@@ -16,7 +16,6 @@
 (env-load "stage4/head-if.lisp")
 (env-load "stage4/keyword-copiers.lisp")
 (env-load "stage4/maptree.lisp")
-(env-load "stage4/mapped-macro.lisp")
 (env-load "stage4/pad.lisp")
 (env-load "stage4/permutate.lisp")
 (env-load "stage4/remove.lisp")
