@@ -116,28 +116,26 @@
 (defmacro define-js-binary (op repl-op)
   `(define-transpiler-binary *js-transpiler* ,op ,repl-op))
 
-(mapcar-macro x
-    '((%%%+       "+")
-      (%%%string+ "+")
-      (%%%-       "-")
-      (%%%/       "/")
-      (%%%*       "*")
-      (%%%mod     "%")
+{,@(@ [`(define-js-binary ,@_)]
+      '((%%%+        "+")
+        (%%%string+  "+")
+        (%%%-        "-")
+        (%%%/        "/")
+        (%%%*        "*")
+        (%%%mod      "%")
 
-      (%%%==      "==")
-      (%%%!=      "!=")
-      (%%%<       "<")
-      (%%%>       ">")
-      (%%%<=      "<=")
-      (%%%>=      ">=")
-      (%%%eq      "===")
-      (%%%neq     "!==")
+        (%%%==       "==")
+        (%%%!=       "!=")
+        (%%%<        "<")
+        (%%%>        ">")
+        (%%%<=       "<=")
+        (%%%>=       ">=")
+        (%%%eq       "===")
 
-      (%%%<<      "<<")
-      (%%%>>      ">>")
-      (%%%bit-or  "|")
-      (%%%bit-and "&"))
-  `(define-js-binary ,@x))
+        (%%%<<       "<<")
+        (%%%>>       ">>")
+        (%%%bit-or   "|")
+        (%%%bit-and  "&")))}
 
 
 ;;;; ARRAYS
